# The preference build system would have been flit, but setuptools had to be
# used to support `pip install git+http...` within Databricks. When trying
# to parse the version using flit, it needs to import the full package
# and some dependencies might be missing in the virtual environment.
# Setuptools allow to explicitly set the location of the version without
# having to import the package.
[build-system]
requires = [
#    "flit_core >=3.2,<4",
    "setuptools",
    "setuptools-scm",
]
#build-backend = "flit_core.buildapi"
build-backend = "setuptools.build_meta"

[project]
name = "settus"
authors = [
    {name = "Olivier Soucy", email = "osoucy.transactions@gmail.com"},
]
description = "Settings management using Pydantic, with ability to retrieve cloud secrets."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["one", "two"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "black",
#    "flit",
    "twine",
]
test = [
    "pytest",
    "pytest-cov",
#    "tox"
]
azure = [
]
aws = [
]
gcp = [
]

[project.urls]
"Homepage" = "https://github.com/opencubes-ai/settus"
"Bug Tracker" = "https://github.com/opencubes-ai/settus/issues"

[tool.setuptools.packages.find]
include = ["settus*"]

[tool.setuptools.dynamic]
version = {attr = "settus._version.VERSION"}

